--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -910,13 +910,14 @@ label
     :z-index 3
     :position absolute
     :bottom 0
+    :left 5px
     li
       .circle
         :display none
         :z-index 1
         :position absolute
         :right -7px
-        :top -46px
+        :top -47px
         :background
           :color #333
 
@@ -939,10 +940,10 @@ label
         :display none
         :z-index 2
         :position absolute
-        :top -48px
-        :right -5px
+        :top -45px
+        :right -1px
         :font
-          :size xx-small
+          :size small
           :weight bold
 
       &:hover
